2009-12-01  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/HashId.pm: Ported to
	Log4Perl (Tree::Element::Hash class)

2009-09-25  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/Instance.pm (write_back): Croak if no
	write_back callbacks were registered

2009-09-09  Dominique Dumont  <dominique.dumont@hp.com> v0.640

	* lib/Config/Model/WizardHelper.pm (new): Correctly scan list
	element.

2009-07-30  Dominique Dumont  <dominique.dumont@hp.com> v0.639

	* lib/Config/Model/WizardHelper.pm (leaf_element_cb): bug fix:
	scan correctly leaf elements of a hash.
	* lib/Config/Model/WizardHelper.pm: use Log4perl

2009-07-27  Dominique Dumont  <dominique.dumont@hp.com>

	* config-edit: Tk cosmetic improvement. Thanks to Jerome Quelin
	for the suggestion

	* lib/Config/Model/WarpedThing.pm (_do_warp): Use
	Log4Perl. Improved error message

	* lib/Config/Model/Searcher.pm (): replace prints with
	Log4perl. Fixed data structure bug

2009-06-29  Dominique Dumont  <dominique.dumont@hp.com> v0.638

	* lib/Config/Model/WarpedNode.pm (is_auto_write_for_type): Added
	new method that need to be forwarded to Node to avoid write
	cds_file bug.

2009-06-23  Dominique Dumont  <dominique.dumont@hp.com>  v0.637

	* lib/Config/Model/Value.pm: As suggested by Jonas Smedegaard,
	replaced 'built_in' parameter with 'upstream_default'. This change
	will trigger warnings but no errors with existing model. To get
	rid of the warnings, the easiest solution is to update the model
	by running "config-model-edit -model Foo -save" (config-model-edit
	is provided by Config::Model::Itself)

	* lib/Config/Model/CheckList.pm: replaced 'built_in_list'
	parameter with 'upstream_default_list'. This change may also
	trigger warnings. These warnings will also be fixed by running the
	config-model-edit command described above.

	* lib/Config/Model/Value.pm: use Log::Log4perl with categories
	Tree::Element::Value and Tree::Element::Warper
