@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 
-#    Copyright (c) 2006-2009 Dominique Dumont.
+#    Copyright (c) 2006-2010 Dominique Dumont.
 #
 #    This file is part of Config-Model.
 #
@@ -460,6 +460,8 @@ Log4perl uses the following categories:
 
 =item Tree::Element::Warped
 
+=item Tree::Node
+
 =item Wizard::Helper
 
 =back
@@ -468,7 +470,6 @@ More categories will come.
 
 =for comment
 Tree
-Tree::Node
 Tree::Element
 Tree::Element::Value::Compute
 Tree::Element::Hash
