@@ -1,3 +1,15 @@
+2010-01-19  Dominique Dumont  <dominique.dumont@hp.com>
+
+	* lib/Config/Model/Node.pm: Ported to Log4Perl (Tree::Node class)
+
+	* lib/Config/Model/AutoRead.pm: Doc updates on plugin mechanism
+	for read/wrote classes
+
+	* lib/Config/Model/Value.pm: model example updates
+
+	* lib/Config/Model/Dumper.pm (dump_tree): Correctly quote values
+	in list elements
+
 2009-12-01  Dominique Dumont  <dominique.dumont@hp.com>
 
 	* lib/Config/Model/HashId.pm: Ported to
